# LTBox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  info_image.bat  start.bat
.github/: ci-tools.json  dependabot.yml  path-filters.yml
.github/actions/setup-fw-env/: action.yml
.github/actions/setup-python-deps/: action.yml
.github/scripts/release/: bundle-python.py  bundle-tools.py
.github/workflows/: build-archive.yml  build-magiskboot-rs.yml  debug.yml  link_check.yml  lint.yml  release.yml  rust-ci.yml  windows_test.yml
READMEs/: README_ko-KR.md  README_zh-CN.md
crates/ltbox-core/: Cargo.toml
crates/ltbox-core/src/: app_paths.rs  downloader.rs  github.rs  lenovo_info.rs  lib.rs  live_sink.rs  partition_lun.rs  safe_path.rs  sahara_xml.rs
crates/ltbox-device/: Cargo.toml
crates/ltbox-device/src/: adb.rs  controller.rs  edl.rs  fastboot.rs  lib.rs
crates/ltbox-device/src/driver/: linux.rs  mod.rs  unsupported.rs  windows.rs
crates/ltbox-gui/: Cargo.toml  build.rs
crates/ltbox-gui/fonts/: lucide.toml
crates/ltbox-gui/lang/: en.json  ja.json  ko.json  ru.json  zh.json
crates/ltbox-gui/src/: arb.rs  arb_overlay.rs  device_name.rs  main.rs  message.rs  settings_store.rs  stdout_tap.rs  theme.rs  widgets.rs
crates/ltbox-gui/src/model/: device.rs  mod.rs  wizard.rs
crates/ltbox-gui/src/update/: advanced.rs  flash.rs  mod.rs  reboot.rs  root.rs  settings.rs  sys.rs  unroot.rs  window.rs
crates/ltbox-gui/src/view/: about.rs  advanced.rs  chrome.rs  components.rs  dashboard.rs  flash.rs  mod.rs  parts.rs  popups.rs  reboot.rs  root.rs  settings.rs  styles.rs  sysupdate.rs  unroot.rs
crates/ltbox-gui/src/workers/: advanced.rs  edl_transition.rs  flash.rs  reboot.rs  root.rs  sysupdate.rs  transfer.rs  unroot.rs
crates/ltbox-gui/src/workers/flash/: full.rs  mod.rs  simple.rs
crates/ltbox-patch/: Cargo.toml  build.rs
crates/ltbox-patch/src/: avb.rs  boot.rs  gki.rs  ksu.rs  lib.rs  magisk.rs  region.rs  root_pipeline.rs  zip_util.rs
crates/ltbox-patch/src/root_pipeline/: apatch.rs  apk.rs  ksu.rs  magisk.rs  mod.rs  skroot.rs
crates/ltbox-patch/src/skroot/: asm.rs  func_end.rs  init_cred.rs  insn.rs  kallsyms.rs  mod.rs  offsets.rs  patch_audit_log_start.rs  patch_avc_denied.rs  patch_base.rs  patch_bytes.rs  patch_current_avc_check.rs  patch_do_execve.rs  patch_filldir64.rs  patch_plan.rs  symbol_analyze.rs  version.rs
crates/ltbox-patch/tests/: skroot_kallsyms.rs  skroot_parity.rs
misc/desktop/: io.github.miner7222.LTBox.desktop
misc/macos/: AppIcon.icns  make-app.sh  render-icon.sh
misc/macos/AppIcon.icon/: README.md  icon.json
tests/: conftest.py
tests/actions/: test_actions.py  test_actions_integration.py  test_actions_unit.py  test_edl_partition_labels.py  test_root_profiles.py  test_root_strategy_support.py  test_root_workflow.py
tests/actions/integration/: fixtures.py  test_region_convert.py  test_root_strategies.py
tests/core/: test_config.py  test_conftest.py  test_device.py  test_downloader.py  test_exports.py  test_fastboot_vars.py  test_github_client.py  test_i18n.py  test_main.py  test_main_contract.py  test_main_menu_flow.py  test_menu_router.py  test_net.py  test_ota_super.py  test_partition.py  test_settings_store.py  test_task_runner.py  test_utils.py  test_workflow.py
tests/helpers/: __init__.py  mocks.py
tests/patch/: test_patch.py  test_root.py
tests/scripts/: build_magiskboot.py  build_tools.py  check_links.py
