[package]
name = "ltbox-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
ureq = { workspace = true }
roxmltree = { workspace = true }
moka = { workspace = true }
camino = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
